--- a/index.Rmd
+++ b/index.Rmd
@@ -1,17 +1,21 @@
 ---
-title: "Social Capital"
-date: "2022-08-02"
-output: html_document
+title: "Economic Connectedness"
+description: |
+  Welcome to the website. I hope you enjoy it!
+site: distill::distill_website
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 library(tidyverse)
-library(distill)
-library(knitr)
+
+# Learn more about creating websites with Distill at:
+# https://rstudio.github.io/distill/website.html
+
+# Learn more about publishing to GitHub Pages at:
+# https://rstudio.github.io/distill/publish_website.html#github-pages
+
 ```
-
-
 
 ```{r}
 ec <- read_rds("ec.rds")
@@ -58,8 +62,4 @@ ec_plot2
 
 
 ```
-
-
-
-
 
